# funky-chat

./: .gitignore  Messages.cs  README.md
.github/workflows/: release.yml  server.yml
src/: FunkyChat.sln  FunkyPipelineChat.sln
src/Client/: .gitignore  FunkyChat.Client.py  FunkyChat.Client.pyproj  FunkyChatPythonClient.py  README.md  build.rs  setup.py
src/Client/src/: events.rs
src/DotnetClient/: FunkyChat.Client.csproj  Program.cs
src/FunkyPipelineChat.Client/: FunkyPipelineChat.Client.csproj  Program.cs
src/FunkyPipelineChat.Server/: Program.cs
src/FunkyPipelineChat.Server/Infrastructure/: ConnectionRepository.cs
src/FunkyPipelineChat.Server/Models/: ChatConnection.cs
src/FunkyPipelineChat.Server/Services/: IncomingConnectionService.cs
src/Protos/: Commands.proto  Messages.proto  README.md
src/PythonClient/: FunkyChatPythonClient.py  messages_pb2.py
src/RustClient/: Cargo.toml  README.md  build.rs
src/RustClient/src/: app.rs  connection.rs  events.rs  input.rs  main.rs  ui.rs
src/RustClient/src/app/: mod.rs
src/RustClient/src/app/states/: connected.rs
src/RustClient/src/ui/: messages.rs  mod.rs  online.rs
src/Server/: Dockerfile  FunkyChat.Server.csproj  Program.cs  README.md
src/Server/Data/: adjectives.txt  nouns.txt
src/Server/Handlers/: ChatNotificationHandler.cs  DirectChatNotificationHandler.cs  EchoCommandHandler.cs  EchoHandler.cs  EchoNotificationHandler.cs  ExitCommandHandler.cs
src/Server/Infrastructure/: ConnectionRepository.cs
src/Server/Models/: ChatConnection.cs  Notifications.cs
uml/: state-diagram.plantuml
(+11 files in other folders)
