[package]
name = "funky-chat-client"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.7"

[dependencies]
anyhow = "1.0"
crossterm = "0.19"
prost = "0.7"
prost-types = "0.7"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
unicode-width = "0.1"